# cv_adapter

./: .gitignore  README.md  adapt_cv.py  cv_queries.yaml  edit.env  llm_service.py  loading_anim.py  pyproject.toml
data/: cv_template.yaml
